--- a/templates/etc/default/grub.j2
+++ b/templates/etc/default/grub.j2
@@ -1,6 +1,9 @@
 {% if grub_consoles | d(False) %}
 {%   set grub_console = "console=" + grub_consoles | join(' console=') %}
 {% endif %}
+{% if grub_cmdline_linux_default_list | d(False) %}
+{%   set grub_cmdline_linux_default = grub_cmdline_linux_default_list | join(' ') %}
+{% endif %}
 {% set grub_cmdline_linux = [] + grub_cmdline_linux_list %}
 {% if ansible_cmdline['rd.auto'] | d(False) %}
 {%   set grub_cmdline_linux = grub_cmdline_linux + ['rd.auto'] %}
@@ -14,7 +17,13 @@
 GRUB_DEFAULT=0
 GRUB_TIMEOUT={{ grub_timeout }}
 GRUB_DISTRIBUTOR=$(lsb_release -i -s 2>/dev/null || echo {{ ansible_distribution }})
+{% if grub_console and grub_cmdline_linux_default | d(False) %}
+GRUB_CMDLINE_LINUX_DEFAULT="{{ grub_console }} {{ grub_cmdline_linux_default }}"
+{% elif grub_cmdline_linux_default | d(False) %}
+GRUB_CMDLINE_LINUX_DEFAULT="{{ grub_cmdline_linux_default }}"
+{% else %}
 GRUB_CMDLINE_LINUX_DEFAULT="{{ grub_console }}"
+{% endif %}
 GRUB_CMDLINE_LINUX="{{ grub_cmdline_linux | join(' ') }}"
 {% if grub_serial | d(False) %}
 GRUB_SERIAL_COMMAND="serial --speed={{ grub_serial.speed }} --unit={{ grub_serial.unit }} --word={{ grub_serial.word }} --parity={{ grub_serial.parity }} --stop={{ grub_serial.stop }}"
