--- a/templates/etc/default/grub.j2
+++ b/templates/etc/default/grub.j2
@@ -17,11 +17,11 @@
 GRUB_DEFAULT=0
 GRUB_TIMEOUT={{ grub_timeout }}
 GRUB_DISTRIBUTOR=$(lsb_release -i -s 2>/dev/null || echo {{ ansible_distribution }})
-{% if grub_console and grub_cmdline_linux_default | d(False) %}
+{% if grub_console is defined and grub_cmdline_linux_default | d(False) %}
 GRUB_CMDLINE_LINUX_DEFAULT="{{ grub_console }} {{ grub_cmdline_linux_default }}"
 {% elif grub_cmdline_linux_default | d(False) %}
 GRUB_CMDLINE_LINUX_DEFAULT="{{ grub_cmdline_linux_default }}"
-{% else %}
+{% elif grub_console is defined | d(False) %}
 GRUB_CMDLINE_LINUX_DEFAULT="{{ grub_console }}"
 {% endif %}
 GRUB_CMDLINE_LINUX="{{ grub_cmdline_linux | join(' ') }}"
